objects/ASIC_News_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Action_Statement__c</fullName>
        <label>Action Statement</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Shared with Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>category of new or alert</description>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Methodology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <label>Background</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cell_Associations_for_IP_Alert__c</fullName>
        <inlineHelpText>Maximum field size is 131,072 characters, inclusive of all the formatting and HTML tags. Only the first 254 characters are displayed in a report. Maximum size for uploaded images is 1MB. Only gif, jpeg and png file types are supported.</inlineHelpText>
        <label>Cell Associations: (for IP Alert)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_notification_status__c</fullName>
        <label>Email notification status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_notification_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag will auto check when all the relevant contacts are notified.</inlineHelpText>
        <label>Is notification completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analog Core</fullName>
                </value>
                <value>
                    <fullName>Compilables (SRAM/RA/ROM/CAM)</fullName>
                </value>
                <value>
                    <fullName>HSS</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
                <value>
                    <fullName>Test/DFTS/JTAG/BSV/BIST/LSSD</fullName>
                </value>
                <value>
                    <fullName>Physical Design</fullName>
                </value>
                <value>
                    <fullName>Base Library</fullName>
                </value>
                <value>
                    <fullName>Design Entry</fullName>
                </value>
                <value>
                    <fullName>Design Optimization</fullName>
                </value>
                <value>
                    <fullName>Front-End Processing</fullName>
                </value>
                <value>
                    <fullName>Methodology</fullName>
                </value>
                <value>
                    <fullName>Synthesis</fullName>
                </value>
                <value>
                    <fullName>Checking/CMOSCHKs/DRC/LVS/MethChks</fullName>
                </value>
                <value>
                    <fullName>PLL</fullName>
                </value>
                <value>
                    <fullName>Business Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Fuse/Redundancy</fullName>
                </value>
                <value>
                    <fullName>Image/Package</fullName>
                </value>
                <value>
                    <fullName>Release/RTX Signoff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_PDK__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select ASIC master PDK</inlineHelpText>
        <label>Master PDK</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Value does not exist or does not match filter criteria. Please make sure the Master PDK has ASIC business type.</errorMessage>
            <filterItems>
                <field>PDK__c.Master_PDK_ASIC__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>type the master PDK name. For exmple &quot;FX14&quot;, etc.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PDK__c</referenceTo>
        <relationshipLabel>ASIC News &amp; Alerts</relationshipLabel>
        <relationshipName>ASIC_News_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Published_on__c</fullName>
        <description>Only published to customer if today&apos;s date is greater than &quot;Published after&quot; date/time.</description>
        <label>Published on</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Description__c</fullName>
        <label>Root Cause Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Subject of the News or Alert</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>IP Alert</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASIC News &amp; Alert</label>
    <listViews>
        <fullName>Admin_View</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Master_PDK__c</columns>
        <columns>Type__c</columns>
        <columns>Published_on__c</columns>
        <columns>Active__c</columns>
        <columns>Email_notification_status__c</columns>
        <columns>Is_notification_completed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Admin View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>News or Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASIC News &amp; Alerts</pluralLabel>
    <recordTypes>
        <fullName>ASIC_IP_Alert</fullName>
        <active>true</active>
        <description>To publish ASIC IP Alert, visible to internal and customers</description>
        <label>ASIC IP Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASIC_News_Alert</fullName>
        <active>true</active>
        <description>ASIC News and Alert, visible to internal and customers</description>
        <label>ASIC News &amp; Alert</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Master_PDK_required_field</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Master_PDK__c )</errorConditionFormula>
        <errorDisplayField>Master_PDK__c</errorDisplayField>
        <errorMessage>Master PDK is required for ASIC News &amp; Alert</errorMessage>
    </validationRules>
</CustomObject>